@@ -15,8 +15,8 @@ users can:
 - automate tasks in the application
 - create a batch task
 
-How to make applications scriptable is described in Documentation. It can be
-done very easily in less than five minutes.
+How to make applications scriptable is described in StepTalk/Documentation. It
+can be done very easily in less than five minutes.
 
 
 Where to get it?
